# data-analysis-labs

./: README.md  pyproject.toml  requirements.txt
lab 1 (NumPy basics)/: lab-1-notebook.ipynb
lab 2 (Statistical data analysis)/: lab-2-notebook.ipynb
lab 3 (Pandas data structures)/: lab-3-notebook.ipynb
lab 4 (Data visualization)/: lab-4-notebook.ipynb
lab 4 (Data visualization)/data/: penguins.csv
lab 5 (Working with Time Series in Pandas)/: lab-5-notebook.ipynb
lab 6 (Data Preprocessing in Pandas)/: lab-6-notebook.ipynb
lab 6 (Data Preprocessing in Pandas)/data/: data.html
lab 7 (Clustering and regression in scikit-learn)/: lab-7-notebook.ipynb
lab 7 (Clustering and regression in scikit-learn)/data/: diamonds.csv
lab 8 (Classification in scikit-learn)/: lab-8-notebook.ipynb
