[tool.poetry]
name = "data-analysis-labs"
version = "0.1.0"
description = "Repository for Data Analysis Labs"
authors = ["Nikita Petrykin <nvnedu2120@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
numpy = "^1.25.2"
pandas = "^2.1.0"
notebook = "^7.0.3"
scipy = "^1.11.2"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
